# oop244_works

./: .gitignore  LICENSE  README.md
ws1/: CMakeLists.txt  File.cpp  File.h  ShoppingList.cpp  ShoppingList.h  ShoppingRec.cpp  ShoppingRec.h  Utils.cpp  Utils.h  reflect.txt  reflection.txt  shoppingListApp.cpp  shoppinglist.csv  ws
ws10/: CMakeLists.txt  main.cpp  reflect.txt  searchNlist.h
ws2/: CMakeLists.txt  Employee.cpp  Employee.h  File.cpp  File.h  main.cpp  reflect.txt
ws3/: Bill.cpp  Bill.h  CMakeLists.txt  Item.cpp  Item.h  ItemTester.cpp  main.cpp  reflect.txt
ws4/: CMakeLists.txt  Canister.cpp  Canister.h  main.cpp  reflect.txt
ws5/: Account.cpp  Account.h  CMakeLists.txt  main.cpp  reflect.txt
ws6/: CMakeLists.txt  TextFile.cpp  TextFile.h  main.cpp  reflect.txt
ws7/: CMakeLists.txt  MotorVehicle.cpp  MotorVehicle.h  Truck.cpp  Truck.h  main.cpp  reflect.txt
ws8/: CMakeLists.txt
ws8/lab/: LblShape.cpp  LblShape.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  reflect.txt
ws9/: CMakeLists.txt  HtmlText.cpp  HtmlText.h  Text.cpp  Text.h  reflect.txt
